fix: Move version text to chat controller to prevent it overlapping controls when compact post form is used

--- a/src/frontend/styles/chat.less
+++ b/src/frontend/styles/chat.less
@@ -117,4 +117,13 @@
   #postbutton {
     min-width: 65px;
   }
+
+  .version-text {
+    position: fixed;
+    left: 2px;
+    bottom: 1px;
+
+    font-size: 0.7rem;
+    color: #898989;
+  }
 }
