--- a/src/frontend/styles/room.less
+++ b/src/frontend/styles/room.less
@@ -138,13 +138,4 @@
     margin: 10px;
     border: 1px solid black;
   }
-
-  .version-text {
-    position: fixed;
-    left: 2px;
-    bottom: 1px;
-
-    font-size: 0.7rem;
-    color: #969696;
-  }
 }
